# mpc-display-rs

./: Cargo.toml  README.md
src/: common.rs  input.rs  lib.rs  main.rs  music.rs  player.rs
src/player/: display.rs  input.rs
src/player/display/: options.rs
