[package]
name = "mpc-display-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
# expect_used = "warn"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
debug_print = "1.0.0"
mpd = "0.1.0"
terminal_size = "0.3.0"
textwrap = "0.16.1"
