[package]
name = "mpc-display-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
# expect_used = "warn"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
debug_print = "1.0.0"
mpd = "0.1.0"
terminal_size = "0.4.1"
termios = "0.3.3"
textwrap = "0.16.1"
uuid = { version = "1.8.0", features = ["v4"] }
